--- a/register.html
+++ b/register.html
@@ -8,19 +8,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.css" />
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/register.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/register.css" />
   </head>
   <body>
     <header>
-      <img src="./img/Logo.svg" alt="myblog" class="logo" />
+      <img src="./assets/img/Logo.svg" alt="myblog" class="logo" />
       <nav>
-        <a href="./login.html" class="btn-login-nav">
-          <img src="./img/icon-login.svg" alt="login" />
+        <a href="./index.html" class="btn-login-nav">
+          <img src="./assets/img/icon-login.svg" alt="login" />
           Login
         </a>
         <a href="#" class="btn-register-nav">
-          <img src="./img/icon-register.svg" alt="register" />
+          <img src="./assets/img/icon-register.svg" alt="register" />
           Register
         </a>
       </nav>
@@ -33,10 +33,10 @@
             <div class="input-fields">
               <div class="input-profile">
                 <div class="profile-circle">
-                  <img src="./img/icon-login.svg" alt="profile" class="profile-placeholder" />
+                  <img src="./assets/img/icon-login.svg" alt="profile" class="profile-placeholder" />
                 </div>
                 <button type="button" class="btn-file">
-                  <img src="./img/icon-image.svg" alt="upload" />
+                  <img src="./assets/img/icon-image.svg" alt="upload" />
                 </button>
               </div>
 
@@ -65,10 +65,10 @@
     <footer>
       <p>©Wenais Corp.</p>
       <button class="btn-top">
-        <img src="./img/ArrowTop.svg" alt="top" />
+        <img src="./assets/img/ArrowTop.svg" alt="top" />
       </button>
     </footer>
-    <script src="./js/api.js"></script>
-    <script src="./js/register.js"></script>
+    <script src="./assets/js/api.js"></script>
+    <script src="./assets/js/register.js"></script>
   </body>
 </html>
