--- a/home.html
+++ b/home.html
@@ -14,22 +14,22 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/home.css" />
   </head>
   <body>
     <header>
-      <img src="./img/Logo.svg" alt="myblog" class="logo" />
+      <img src="./assets/img/Logo.svg" alt="myblog" class="logo" />
       <nav>
         <div class="profile-filled">
-          <img src="./img/profile.png" alt="profile" />
+          <img src="./assets/img/profile.png" alt="profile" />
         </div>
         <button type="button" class="btn-write">
-          <img src="./img/icon-modify-white.svg" alt="write" />
+          <img src="./assets/img/icon-modify-white.svg" alt="write" />
           Write
         </button>
         <button type="button" class="btn-logout">
-          <img src="./img/icon-logout.svg" alt="logout" />
+          <img src="./assets/img/icon-logout.svg" alt="logout" />
           Logout
         </button>
       </nav>
@@ -55,7 +55,7 @@
             <div class="about-profile">
               <p class="about-heading">About Me</p>
               <div class="about-avatar">
-                <img src="./img/profile.png" alt="profile" />
+                <img src="./assets/img/profile.png" alt="profile" />
               </div>
               <p class="about-name">User</p>
               <p class="about-desc">
@@ -83,10 +83,10 @@
             <div class="about-follow">
               <p class="about-heading">Follow</p>
               <div class="about-social">
-                <img src="./img/Facebook.svg" alt="facebook" />
-                <img src="./img/Twitter.svg" alt="twitter" />
-                <img src="./img/Instagram.svg" alt="instagram" />
-                <img src="./img/Github.svg" alt="github" />
+                <img src="./assets/img/Facebook.svg" alt="facebook" />
+                <img src="./assets/img/Twitter.svg" alt="twitter" />
+                <img src="./assets/img/Instagram.svg" alt="instagram" />
+                <img src="./assets/img/Github.svg" alt="github" />
               </div>
             </div>
           </aside>
@@ -104,10 +104,10 @@
     <footer>
       <p>©Wenais Corp.</p>
       <button class="btn-top">
-        <img src="./img/ArrowTop.svg" alt="top" />
+        <img src="./assets/img/ArrowTop.svg" alt="top" />
       </button>
     </footer>
-    <script src="./js/api.js"></script>
-    <script src="./js/home.js"></script>
+    <script src="./assets/js/api.js"></script>
+    <script src="./assets/js/home.js"></script>
   </body>
 </html>
