--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.css" />
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/login.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/login.css" />
   </head>
   <body>
     <header>
-      <img src="./img/Logo.svg" alt="myblog" class="logo" />
+      <img src="./assets/img/Logo.svg" alt="myblog" class="logo" />
       <nav>
         <a href="#" class="btn-login-nav">
-          <img src="./img/icon-login.svg" alt="login" />
+          <img src="./assets/img/icon-login.svg" alt="login" />
           Login
         </a>
         <a href="./register.html" class="btn-register-nav">
-          <img src="./img/icon-register.svg" alt="register" />
+          <img src="./assets/img/icon-register.svg" alt="register" />
           Register
         </a>
       </nav>
@@ -50,10 +50,10 @@
     <footer>
       <p>©Wenais Corp.</p>
       <button class="btn-top">
-        <img src="./img/ArrowTop.svg" alt="top" />
+        <img src="./assets/img/ArrowTop.svg" alt="top" />
       </button>
     </footer>
-    <script src="./js/api.js"></script>
-    <script src="./js/login.js"></script>
+    <script src="./assets/js/api.js"></script>
+    <script src="./assets/js/login.js"></script>
   </body>
 </html>
