--- a/mypage.html
+++ b/mypage.html
@@ -8,22 +8,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.css" />
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/mypage.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/mypage.css" />
   </head>
   <body>
     <header>
-      <img src="./img/Logo.svg" alt="myblog" class="logo" />
+      <img src="./assets/img/Logo.svg" alt="myblog" class="logo" />
       <nav>
         <div class="profile-filled">
-          <img src="./img/profile.png" alt="profile" />
+          <img src="./assets/img/profile.png" alt="profile" />
         </div>
         <button type="button" class="btn-save">
-          <img src="./img/icon-modify-white.svg" alt="edit" />
+          <img src="./assets/img/icon-modify-white.svg" alt="edit" />
           Save
         </button>
         <button type="button" class="btn-logout">
-          <img src="./img/icon-logout.svg" alt="logout" />
+          <img src="./assets/img/icon-logout.svg" alt="logout" />
           Logout
         </button>
       </nav>
@@ -46,10 +46,10 @@
             <div class="input-fields">
               <div class="input-profile">
                 <div class="profile-circle">
-                  <img src="./img/profile.png" alt="profile" />
+                  <img src="./assets/img/profile.png" alt="profile" />
                 </div>
                 <button type="button" class="btn-file">
-                  <img src="./img/icon-image.svg" alt="upload" />
+                  <img src="./assets/img/icon-image.svg" alt="upload" />
                 </button>
               </div>
 
@@ -78,7 +78,7 @@
     <footer>
       <p>©Wenais Corp.</p>
       <button class="btn-top">
-        <img src="./img/ArrowTop.svg" alt="top" />
+        <img src="./assets/img/ArrowTop.svg" alt="top" />
       </button>
     </footer>
   </body>
